--- a/Backend/src/main/resources/application.yml
+++ b/Backend/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
   datasource:
     url: ${DATASOURCE_URL}
     username: ${MYSQL_USER}
-    password: ${MYSQL_ROOT_PASSWORD}
+    password: ${MYSQL_PASSWORD}
   jpa:
     show-sql: true
     generate-ddl: true
